# ihateai

./: dev.ipynb  eml.ipynb  justfile  pyproject.toml
src/ihateai/: data.py  grid.py  utils.py
